--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/logo3.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="../client/assets/logo3.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Book Store</title>
